# CppStarter

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  readme.md
.github/workflows/: ci.yml  linux.yml  macos.yml  windows.yml
CppDllStarter/: CMakeLists.txt
CppDllStarter/include/CppDllStarter/: Sample.h
CppDllStarter/source/: Sample.cpp  core.h
CppExeStarter/: CMakeLists.txt  cppstpch.cpp  cppstpch.h
CppExeStarter/source/: Sample.cpp
CppGoogleTestStarter/: CMakeLists.txt
CppGoogleTestStarter/lib/google-test/: CMakeLists.txt  CMakeLists.txt.in
CppGoogleTestStarter/tests/: SampleTests.cpp
CppQtGuiStarter/: CMakeLists.txt
CppQtGuiStarter/resources/: CppQtGuiStarter.aps  CppQtGuiStarter.qrc  CppQtGuiStarter.rc
CppQtGuiStarter/source/: CppQtGuiStarter.cpp  CppQtGuiStarter.h  CppQtGuiStarter.ui  main.cpp
scripts/: appveyor.ps1
